syntax = "proto3";

package ruft;

message LogEntry {
  uint64 index = 1;
  uint64 term = 2;
  bytes command = 3; // 上层命令，Raft 不关心内容
}

message AppendEntriesRequest {
  uint64 term = 1;
  uint64 leader_id = 2;
  uint64 prev_log_index = 3;
  uint64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  uint64 leader_commit = 6;
}

message AppendEntriesResponse {
  uint64 term = 1;
  bool success = 2;
}